<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.paolo.justjava.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAllCaps="true"
            android:padding="16dp"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            style="@style/header"/>
        <CheckBox
            android:id="@+id/wippead_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Whipped_Cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Chocolate"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:padding="8dp"
                android:layout_marginLeft="16dp"
                android:onClick="submitQuantityminus"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="26sp"
                android:textColor="@android:color/white"
                android:padding="8dp"
                android:layout_marginLeft="16dp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:padding="8dp"
                android:layout_marginLeft="16dp"
                android:onClick="submitQuantityplus"/>

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order_Summary"
            style="@style/header"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textAllCaps="true"
            android:padding="16dp"
            android:layout_marginTop="2dp"
            android:textSize="10sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moneta"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:padding="16dp"
            android:layout_marginLeft="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrder"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_order"
            android:padding="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="composeEmail"/>
         </LinearLayout>
    </LinearLayout>
</ScrollView>

